<resources>
    <string name="app_name">Muzic</string>
    <string name="tv_app_name">Muzic</string>
    <string name="tv_home_scr_title_1">Hot Recommended</string>
    <string name="tv_home_scr_title_2">Playlists</string>
    <string name="item_home">Home</string>
    <string name="item_songs">Songs</string>
    <string name="item_setting">Settings</string>
    <string name="text_home_scr_title_3">Recent Played</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tv_settings">Settings</string>
    <string name="tv_display">Display</string>
    <string name="tv_audio">Audio</string>
    <string name="tv_headset">Headset</string>
    <string name="tv_lockscreen">Lockscreen</string>
    <string name="tv_advanced">Advanced</string>
    <string name="tv_other">Other</string>
    <string name="item_themes">Themes</string>
    <string name="item_ringtone">RingtoneCutter</string>
    <string name="item_sleep_timer">Sleep Timer</string>
    <string name="item_equaliser">Equaliser</string>
    <string name="item_drive_mode">Drive Mode</string>
    <string name="item_hidden_folder">Hidden Folders</string>
    <string name="item_scan_media">Scan Media</string>
    <string name="sample_number">69</string>
    <string name="text_albums">Albums</string>
    <string name="text_artist">Artist</string>
    <string name="tv_themes">Themes</string>
    <string name="tv_ringtone">Ringtone Cutter</string>
    <string name="tv_timer">Sleep Timer</string>
    <string name="tv_equaliser">Equaliser</string>
    <string name="tv_driver_mode">Driver Mode</string>
    <string name="tv_folder">Hidden Folder</string>
    <string name="tv_scan">Scan Media</string>
    <string name="tv_tab_layout_title_1">All Songs</string>
    <string name="tv_tab_layout_title_2">Albums</string>
    <string name="tv_tab_layout_title_3">Artists</string>
    <string name="tv_tab_layout_title_4">Genres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_viewall">View All</string>
    />
</resources>